scripts/cd/ingress/rm-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rm-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Source "external";
spec:
  backend:
    serviceName: webui
    servicePort: 10080
  tls:
  - hosts:
    - paygorm-sit.southeastasia.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: paygorm-sit.southeastasia.cloudapp.azure.com
    http:
      paths:
      - path: /storageadapter/(.*)
        backend:
          serviceName: storageadapter
          servicePort: 80
      - path: /iothubmanager/*
        backend:
          serviceName: iothubmanager
          servicePort: 80
      - path: /telemetry/*
        backend:
          serviceName: devicetelemetry
          servicePort: 80
      - path: /devicesimulation/*
        backend:
          serviceName: simulation
          servicePort: 80
      - path: /config/*
        backend:
          serviceName: config
          servicePort: 80
      - path: /asamanager/(.*)
        backend:
          serviceName: asamanager
          servicePort: 80
      - path: /auth/*
        backend:
          serviceName: auth
          servicePort: 80
      - path: /
        backend:
          serviceName: webui
          servicePort: 10080
